--- a/20230609_nav/css/style.css
+++ b/20230609_nav/css/style.css
@@ -1,3 +1,55 @@
+@import url('https://fonts.googleapis.com/css2?family=Inter&family=Nanum+Myeongjo:wght@400;700;800&family=Noto+Sans+KR:wght@700&display=swap');
+
+
+/* Variables CSS */
+:root{
+    /* color */
+    --first-color:#008156;
+    --second-color: #efb11c;
+    --body-color: #0000;
+
+    /* font */
+    --body-font: 'Nanum Myeongjo', serif;
+    --h1-font-size: 2rem;
+    --h2-font-size: 1.5rem;
+    --h1-font-size: 1.25rem;
+    --nomal-font-size: 1rem;
+    --small-font-size: 0.8rem;
+    --smaller-font-size: 0.6rem;
+    --font-reaular: 400;
+    --font-bold: 700;
+    --font-extra-bold: 800;
+
+}
+
+body{
+    font-family: var(--body-font);
+    color: var(--body-color);
+}
+
+/* nav */
+header{
+    background-color: var(--first-color);
+    position: fixed;
+    top: 0;
+    right: 0;
+    left: 0;
+}
+
+nav{
+    height: 44px;
+}
+
+.nav-container{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.nav-list{
+    display: flex;
+}
+
 *{
     margin: 0;
     padding: 0;
