--- a/20230609_nav/css/style.css
+++ b/20230609_nav/css/style.css
@@ -1,68 +1,108 @@
-@import url('https://fonts.googleapis.com/css2?family=Inter&family=Nanum+Myeongjo:wght@400;700;800&family=Noto+Sans+KR:wght@700&display=swap');
-
+/* Google Font */
+@import url('https://fonts.googleapis.com/css2?family=Nanum+Myeongjo:wght@400;700;800&display=swap');
 
 /* Variables CSS */
-:root{
+:root {
     /* color */
-    --first-color:#008156;
-    --second-color: #efb11c;
-    --body-color: #0000;
+    --first-color: #009a48;
+    --second-color: rgb(255, 212, 111);
+    --body-color: #000;
 
     /* font */
     --body-font: 'Nanum Myeongjo', serif;
-    --h1-font-size: 2rem;
-    --h2-font-size: 1.5rem;
-    --h1-font-size: 1.25rem;
-    --nomal-font-size: 1rem;
+    --h1-font-size: 2rem;   /* 32px */
+    --h2-font-size: 1.5rem; /* 24px */
+    --h3-font-size: 1.25rem;    /* 20px */
+    --normal-font-size: 1rem;   /* 16px */
     --small-font-size: 0.8rem;
     --smaller-font-size: 0.6rem;
-    --font-reaular: 400;
+    --font-regular: 400;
     --font-bold: 700;
     --font-extra-bold: 800;
-
 }
 
-body{
+body {
     font-family: var(--body-font);
     color: var(--body-color);
 }
 
 /* nav */
-header{
+header {
     background-color: var(--first-color);
     position: fixed;
     top: 0;
     right: 0;
     left: 0;
 }
-
-nav{
+nav {
     height: 44px;
 }
-
-.nav-container{
+.nav.container {
     display: flex;
     justify-content: space-between;
     align-items: center;
+    padding: 0 16px 0 16px;
 }
 
-.nav-list{
+.nav.container a {
+    color: #fff;
+}
+
+.nav-list {
     display: flex;
+    column-gap: 80px;
+    font-weight: var(--font-extra-bold);
 }
 
-*{
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
+.nav-toggle{
+    font-size: var(--h2-font-size); /* 시험문제 : 아이콘 사이즈를 변경할때 이미지 속성이 아닌 폰트 사이즈 속성을 사용함 */
+    visibility: hidden;
 }
-ul{
-    list-style: none;
+
+
+/* tablet */
+@media screen and (max-width: 720px) {
+    /* .nav-logo 가운데 */
+    .nav-logo{
+        margin: 0 auto;
+    }
+    /* .nav-toggle 보이기 */
+    .nav-toggle{
+        visibility: visible;
+        position: absolute;
+        right: 16px; /* .nav-logo 가운데 정확히 위치 */
+    }
+    /* .nav-list navbar 아래로 */
+    .nav-list{
+        position: absolute;
+        top: 44px; /* navbar 아래로 */
+        right: 0; /* 너비를 양 옆으로 늘리기 */
+        left: 0; /* 너비를 양 옆으로 늘리기 */
+        flex-direction: column; /* 수직 배열 */
+        align-items: center; /* 교차축 가운데 */
+        background-color: rgba(255, 212, 111, 0.4);
+        backdrop-filter: blur(8px); /* blur 효과 */
+        height: 0;
+        overflow: hidden;
+    }
+
+    .nav-item{
+        padding: 1em 0;
+        border-bottom: 2px solid #fff;
+    }
+
+    .nav-link{
+        display: block;
+    }
+
+
+    /* show-menu하면, .nav-list 보이게 */
+    /* show-menu하면, .nav-toggle 버튼 x로 */
+
+
 }
-a{
-    text-decoration: none;
-    color: black;
-}
-img{
-    max-width: 100%;
-    height: auto;
+
+/* moblie */
+@media screen and (max-width: 540px) {
+    
 }
