--- a/20230609_nav/css/style.css
+++ b/20230609_nav/css/style.css
@@ -79,10 +79,11 @@ nav {
         right: 0; /* 너비를 양 옆으로 늘리기 */
         left: 0; /* 너비를 양 옆으로 늘리기 */
         flex-direction: column; /* 수직 배열 */
-        align-items: center; /* 교차축 가운데 */
+        /* align-items: center; 교차축 가운데 */
+        text-align: center; /* 글자만 가운데 */
         background-color: rgba(255, 212, 111, 0.4);
         backdrop-filter: blur(8px); /* blur 효과 */
-        height: 0;
+        /* height: 0; */
         overflow: hidden;
     }
 
