--- a/20230609_nav/css/style.css
+++ b/20230609_nav/css/style.css
@@ -81,9 +81,9 @@ nav {
         flex-direction: column; /* 수직 배열 */
         /* align-items: center; 교차축 가운데 */
         text-align: center; /* 글자만 가운데 */
-        background-color: rgba(255, 212, 111, 0.4);
+        background-color: rgba(255, 186, 27, 0.4);
         backdrop-filter: blur(8px); /* blur 효과 */
-        /* height: 0; */
+        height: 0;
         overflow: hidden;
     }
 
@@ -98,6 +98,9 @@ nav {
 
 
     /* show-menu하면, .nav-list 보이게 */
+    .show-menu{
+        height: 159px;
+    }
     /* show-menu하면, .nav-toggle 버튼 x로 */
 
 
