--- a/20230602_media query/css/style2.css
+++ b/20230602_media query/css/style2.css
@@ -1,19 +1,19 @@
 /* 3단계의 동작을 min-width를 써서 만드세요 */
 
 
-/* moblie */
+/* mobile: 0~540px */
 body{
     background-color: thistle;
 }
 
-/* tablet */
+/* tablet: 541~720px */
 @media screen and (min-width:541px){
     body{
         background-color: lightpink;
     }
 }
 
-/* desktop */
+/* desktop: 721px~ */
 @media screen and (min-width:721px){
     body{
         background-color: lightcyan;
