add bookshelf animation

--- a/20230602_media query/css/style.css
+++ b/20230602_media query/css/style.css
@@ -17,8 +17,10 @@ body{
     }
 }
 
-/* ** ex) and() -> x
-          () x -> x
-          max-width= -> x */
+/* ** 
+ex) and() -> x
+    () x -> x
+    max-width= -> x 
+*/
 
 
