--- a/20230321_helloboyfriend.html/css/style.css
+++ b/20230321_helloboyfriend.html/css/style.css
@@ -8,12 +8,12 @@ h2{
     /* background-color: plum; */
 }
 
-/* 첫번째 h2만 plum 배경색 *h1은 적용이 안 됨(시험문제)* */ 
+/* 첫번째 h2만 plum 배경색 h1은 적용이 안 됨(시험문제)* */ 
 h1 + h2{
     /* background-color: plum; */
 }
 
-/* h1의 자매인 모든 h1에 plum 배경색 */
+/* h1의 자매인 모든 h2에 plum 배경색 */
 h1 ~ h2{
     background-color: plum;
 }
@@ -43,7 +43,7 @@ ul{
 li:nth-child(5){
     text-decoration: underline;
 }
-/* 짝수 행: even, 2n/ 홀수행: odd */
+/* 짝수 행: even, 2n / 홀수행: odd*/
 li:nth-child(even){
     background-color: #eee;
 }
