--- a/20230621_bookreviwecalender/css/bookshelf.css
+++ b/20230621_bookreviwecalender/css/bookshelf.css
@@ -9,6 +9,7 @@
     margin-right: auto;  /* 가운데 맞춤 */
 }
 
+
 .row-container {
     display: flex;
     column-gap: 80px;
@@ -17,8 +18,17 @@
 
 .book-item {
     box-shadow: 0 16px 32px #ddd;
+    transition: all 0.2s; /* hover일 뿐만 아니라 마우스 벗어나는 경우도 자연스럽게 내려오기 */
+}
+
+.book-item:hover{
+    /* border: 4px solid red; */
+    box-shadow: 0 32px 64px #e0e0e0; /* 그림자 더 밑으로, 더 흐리게, 더 밝게 */
+    transform: translateY(-8px); /* 위로 8px 이동함 */
+    transition: all 0.2s;
 }
 
 .book-item > img {
     width: 150px;
+    display: block; /* 이미지 밑에 살짝 생기는 여백 문제 해결 */
 }
