--- a/20230621_bookreviwecalender/css/review.css
+++ b/20230621_bookreviwecalender/css/review.css
@@ -1,5 +1,7 @@
 main {
+    margin: 0 auto;
     margin-top: calc(44px + 100px);
+    width: calc(100% - 100px * 2);  
 }
 
 .container {
@@ -8,51 +10,85 @@ main {
 .image-info-groups {
     /* flex-wrap: wrap;     태블릿 너비일때 info-groups 전체가 먼저 wrap 돼버려서 주석 처리 */
 }
+
+.book-image {
+    width: 200px;
+    min-width: 200px;   /* 이미지 너비가 자동으로 줄어드는 문제 해결 */
+}
+.book-image > img {
+    display: block;     /* 이미지 아래 살짝 하얀 여백 생기는 문제 해결 */
+    border-radius: 8px;
+    box-shadow: 0 16px 32px #aaa;
+    transition: all 0.4s;
+}
+.book-image > img:hover {
+    transform: perspective(400px) rotateY(20deg);
+}
+
 .info-groups {
     flex-wrap: wrap;
+    margin: 0 40px;
+    gap: 40px;
+    min-width: 200px;       /* ... */
 }
 .info-group {
     flex-direction: column;
+    gap: 40px;
+    overflow: hidden;       /* ... */
 }
 
 .info {
     flex-direction: column;
 }
 
+.title,
+.author,
+.publisher,
+.read-date,
+.synopsis,
+.phrase {
+    font-size: 1.25rem;
+    white-space: nowrap;    /* ... */
+    overflow: hidden;       /* ... */
+    text-overflow: ellipsis;    /* ... */
+}
+.label {
+    color: #999;
+}
+.synopsis > input,
+.phrase > input {
+    width: 100%;
+    height: 2rem;
+}
+
 .reviews {
     flex-direction: column;
+    margin: 40px 0;
+    gap: 40px;
 }
 .review {
     flex-direction: column;
 }
 
 @media screen and (max-width: 540px) {
+    main {
+        margin-top: calc(44px + 40px);
+    }
     .image-info-groups {
         flex-direction: column;
     }
+    .book-image { 
+        margin: 0 auto;     /* 이미지가 있는 div 가운데로 */
+    }
     .info-groups {
         flex-direction: column;
+        margin: 40px 0 0;
     }
 }
 
 
 
 /* delete me */
-main div {
+/* main div {
     border: 2px solid black;
-}
-.book-image {
-    background-color: bisque;
-    width: 200px;
-    min-width: 200px;
-    height: 400px;
-}
-.info {
-    background-color: tomato;
-    width: 200px;
-    height: 100px;
-}
-.review {
-    background-color: khaki;
-    height: 100px;
-}
+} */
